[FFS-4566] create base v1 specs of the hub based off their specs
